Change user images, fix profile image stretching

--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -20,6 +20,7 @@
         width: 50px;
         height: 50px;
         margin: 2px 12px 0 0;
+        object-fit: cover;
 
         @media only screen and (max-width: $mobile-threshold-width) {
           width: 35px;
